Remove unused beats icon, update Tailwind configuration for HTML files, and implement audio player functionality with WaveSurfer

--- a/ai-voice-collection.html
+++ b/ai-voice-collection.html
@@ -193,7 +193,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -216,7 +216,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -239,7 +239,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -262,7 +262,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -285,7 +285,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -308,7 +308,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -331,7 +331,7 @@
                                     </div>
                                     <div
                                         class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                                        <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                                        <div class="w-full waveform"></div>
                                     </div>
                                 </div>
                             </td>
@@ -349,6 +349,7 @@
 
 
     <!-- Scripts -->
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="/src/site.js"></script>
 
 </body>
