--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -289,8 +289,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -310,8 +310,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -331,8 +331,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -352,8 +352,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -373,8 +373,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -394,8 +394,8 @@
                           </svg>
 
                         </div>
-                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex  justify-center p-1 py-1">
-                          <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
+                        <div class="eco-box w-full bg-gray rounded-lg hidden lg:flex justify-center px-1">
+                          <div class="w-full waveform"></div>
                         </div>
                       </div>
                     </td>
@@ -604,6 +604,7 @@
   <!-- END WRAPPER -->
 
   <!-- Scripts -->
+  <script src="https://unpkg.com/wavesurfer.js"></script>
   <script src="/src/site.js"></script>
 
 </body>
