AI Voice Creation page fixed + Popup added

--- a/ai-voice-collection.html
+++ b/ai-voice-collection.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ai Voice Collection</title>
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="/src/styles.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
                     <h6 class="sidebar__menu-text font-bold text-dark ps-3 opacity-50 mb-3">Menu</h6>
 
                     <!-- Home Link -->
-                    <a href="" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
+                    <a href="index.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
                         <!-- Replace with your home icon -->
                         <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
                         <span class="ml-3 sidebar-text hide-on-collapse text-black opacity-50">Home</span>
