--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Welcome to Hello Agent</title>
-  <link rel="stylesheet" href="src/styles.css">
+  <link rel="stylesheet" href="/src/styles.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
         <h6 class="sidebar__menu-text font-bold text-dark ps-3 opacity-50 mb-3">Menu</h6>
 
         <!-- Home Link -->
-        <a href="" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
+        <a href="index.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
           <!-- Replace with your home icon -->
           <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
           <span class="ml-3 sidebar-text hide-on-collapse text-black opacity-50">Home</span>
@@ -164,7 +164,7 @@
           <!-- Box -->
           <div class="w-1/2 lg:w-1/4">
             <div
-              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-[#1AFFE4] transition duration-500">
+              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-tertiary transition duration-500">
               <div class="px-2 py-4 rounded-lg">
                 <p class="text-xl leading-relaxed text-[#0A574E] mb-2">Total Call</p>
                 <h2 class="font-bold text-5xl md:text-6xl leading-none">100</h2>
@@ -176,7 +176,7 @@
           <!-- Box -->
           <div class="w-1/2 lg:w-1/4 ps-4 md:ps-0">
             <div
-              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-[#1AFFE4] transition duration-500">
+              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-tertiary transition duration-500">
               <div class="px-2 py-4 rounded-lg">
                 <p class="text-xl leading-relaxed text-[#0A574E] mb-2">Call Status</p>
                 <h2 class="font-bold text-5xl md:text-6xl leading-none">100</h2>
@@ -188,7 +188,7 @@
           <!-- Box -->
           <div class="w-1/2 lg:w-1/4">
             <div
-              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-[#1AFFE4] transition duration-500">
+              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-tertiary transition duration-500">
               <div class="px-2 py-4 rounded-lg">
                 <p class="text-xl leading-relaxed text-[#0A574E] mb-2">Total Leads</p>
                 <h2 class="font-bold text-5xl md:text-6xl leading-none">100</h2>
@@ -200,7 +200,7 @@
           <!-- Box -->
           <div class="w-1/2 lg:w-1/4 ps-4 md:ps-0">
             <div
-              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-[#1AFFE4] transition duration-500">
+              class="colls rounded-2xl md:mt-0 mt-2 p-4 md:py-7 bg-gray hover:bg-[#0A574E] hover:text-tertiary transition duration-500">
               <div class="px-2 py-4 rounded-lg">
                 <p class="text-xl leading-relaxed text-[#0A574E] mb-2">Total Costs</p>
                 <h2 class="font-bold text-5xl md:text-6xl leading-none">100</h2>
